[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Александр <a.gavrilov@mytechhelp.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
aiogram = "^3.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
